--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "dms_assistant",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "AI powered Dungeon Master's assistant.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"svelte-check": "svelte-check --tsconfig tsconfig.json"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@types/express": "^5.0.3",
+		"@types/node": "^16.18.126",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.25.9",
+		"esbuild-svelte": "^0.9.3",
 		"obsidian": "latest",
+		"svelte": "^5.38.3",
+		"svelte-check": "^4.3.1",
+		"svelte-preprocess": "^6.0.3",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "~5.0.0"
+	},
+	"dependencies": {
+		"@google/genai": "^1.17.0",
+		"express": "^5.1.0",
+		"uuid": "^11.1.0"
 	}
 }
