--- a/package.json
+++ b/package.json
@@ -29,17 +29,27 @@
 	},
 	"dependencies": {
 		"@google/genai": "^1.17.0",
+		"@shikijs/rehype": "^3.12.2",
+		"core-js": "^3.45.1",
 		"express": "^5.1.0",
+		"highlight.js": "^11.11.1",
 		"rehype-highlight": "^7.0.2",
 		"rehype-katex": "^7.0.1",
+		"rehype-parse": "^9.0.1",
+		"rehype-sanitize": "^6.0.0",
 		"rehype-stringify": "^10.0.1",
+		"remark-breaks": "^4.0.0",
+		"remark-definition-list": "^2.0.0",
 		"remark-emoji": "^5.0.2",
 		"remark-footnotes": "^4.0.1",
+		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-math": "^6.0.0",
 		"remark-parse": "^11.0.0",
 		"remark-rehype": "^11.1.2",
+		"remark-relative-links": "^0.0.6",
 		"remark-toc": "^9.0.0",
+		"svelte-exmarkdown": "^5.0.2",
 		"unified": "^11.0.5",
 		"uuid": "^11.1.0"
 	}
