--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"svelte-check": "^4.3.1",
 		"svelte-preprocess": "^6.0.3",
 		"tslib": "2.4.0",
-		"typescript": "~5.0.0"
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"@anthropic-ai/sdk": "^0.67.0",
