--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@shikijs/rehype": "^3.13.0",
 		"core-js": "^3.46.0",
 		"express": "^5.1.0",
+		"fuzzysort": "^3.1.0",
 		"gpt-tokenizer": "^3.2.0",
 		"highlight.js": "^11.11.1",
 		"katex": "^0.16.25",
