--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"id": "ai_agent",
 	"name": "AI Agent",
-	"version": "0.0.5",
-	"minAppVersion": "0.15.0",
+	"version": "1.0.0",
+	"minAppVersion": "1.9.14",
 	"description": "AI powered agent assistant.",
 	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"authorUrl": "https://github.com/Andy-Stack/ai-agent-plugin",
+	"fundingUrl": "https://buymeacoffee.com/andy.stack",
 	"isDesktopOnly": false
 }
