--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"highlight.js": "^11.11.1",
 		"katex": "^0.16.25",
 		"lowlight": "^3.3.0",
+		"openai": "^6.8.1",
 		"path-browserify": "^1.0.1",
 		"rehype-highlight": "^7.0.2",
 		"rehype-katex": "^7.0.1",
