--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"@types/express": "^5.0.5",
 		"@types/node": "^24.10.0",
 		"@types/path-browserify": "^1.0.3",
-		"@typescript-eslint/eslint-plugin": "8.46.3",
-		"@typescript-eslint/parser": "8.46.3",
+		"@typescript-eslint/eslint-plugin": "8.46.4",
+		"@typescript-eslint/parser": "8.46.4",
 		"@vitest/ui": "^4.0.8",
 		"builtin-modules": "5.0.0",
 		"esbuild": "^0.27.0",
@@ -64,6 +64,7 @@
 		"remark-rehype": "^11.1.2",
 		"remark-wiki-link": "^2.0.1",
 		"unified": "^11.0.5",
-		"uuid": "^13.0.0"
+		"uuid": "^13.0.0",
+		"zod": "^4.1.12"
 	}
 }
